# bewise

./: Dockerfile  README.md  docker-compose.yaml  logging.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 03d9e04883d1_migration_table.py  9e540c0c0bed_migration_table.py  b3275ea9b450_tables_migration.py
bewise/: main.py
bewise/app/: config.py  crud.py  models.py  producer.py  schemas.py
bewise/logger/: logger.py
